# ai-agent-learning

./: .env.example  .gitignore  pyproject.toml
code-snippets/basics/: prompt_format_comparison.py
code-snippets/langchain/: 01_langchain_basics.py  02_tools_and_agents.py  03_tool_prompt_inspection.py  04_memory.py  05_rag_basics.py  06_agent_with_rag.py  07_advanced_agent_patterns.py  agent_architectures.py  code_review_agent.py  distributed_review_agent.py  prompt_format_comparison.py  workflow_vs_agentic.py
notes/: agent-architecture-design.md
progress/: agent-study-tracker.md
projects/01-doc-qa-system/: requirements.txt
projects/01-doc-qa-system/src/: __init__.py  app.py  document_loader.py  qa_engine.py  reranker.py  vector_store.py
projects/01-doc-qa-system/tests/: test_document_loader.py  test_qa_engine.py  test_vector_store.py
resources/: interview-prep.md  reading-list.md
sessions/2025-12-23/: session-notes.md
sessions/2025-12-25/: session-notes.md
sessions/2025-12-26/: session-notes.md
sessions/2025-12-27/: session-notes.md
sessions/2025-12-29/: session-notes.md
sessions/2025-12-31/: session-notes.md
